# translate-voice

./: CLAUDE.md
client/: pyproject.toml  voice_client.py
transcribe_server/: pyproject.toml  server.py
translate_server/: pyproject.toml  server.py
