[project]
name = "voice-client"
version = "0.1.0"
description = "Client for voice transcription and translation pipeline"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "tqdm>=4.66",
]

[project.scripts]
voice-client = "voice_client:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
