[project]
name = "translate-server"
version = "0.1.0"
description = "Translation server using translategemma GGUF via llama-cpp-python"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "llama-cpp-python>=0.2.77",
    "huggingface-hub>=0.23",
    "jinja2>=3.1",
]

# 1. Define both extra indices
[[tool.uv.index]]
name = "llama-cpp-cuda"
url = "https://abetlen.github.io/llama-cpp-python/whl/cu130"
explicit = true

[[tool.uv.index]]
name = "llama-cpp-metal"
url = "https://abetlen.github.io/llama-cpp-python/whl/metal"
explicit = true

# 2. Use environment markers to route the dependency conditionally
[tool.uv.sources]
llama-cpp-python = [
    { index = "llama-cpp-metal", marker = "sys_platform == 'darwin'" },
    { index = "llama-cpp-cuda", marker = "sys_platform != 'darwin'" },
]
